# expobot

./: README.md  backtest.py  database_expobot.db  db_setup.py  pyproject.toml  run_dev_server.bat  thunder-collection_ExpoBot.json
app/: backtest.py  candles_binance_dot_usdt_1h.json  config.py  db.py  main.py  settings.py
app/api/: bot.py
app/models/: bot.py  level.py  order.py
app/routers/: __init__.py  bot.py  gui.py
app/services/: bot.py  db.py  level.py  order.py  tick.py
app/services/exchange/: backtest.py  base.py  manager.py  real.py  virtual.py
app/templates/bot/: bot.html  bot_details.html
app/templates/bots/: bots_list.html  bots_table_tbody.html
app/templates/layouts/: main.html
app/templates/partial/: _bot_status.html
expobot/: backtest_binance_dot_usdt.db  database_expobot.db  database_expobot.db-shm  database_expobot.db-wal  db.py  db_setup.py  main.py  run_dev_server.bat  settings.py
expobot/models/: base.py  bot.py  level.py  order.py  session.py
expobot/routers/: bot.py  gui.py
expobot/schemas/: bot.py  enums.py  session.py
expobot/services/: bot.py  calculations.py  db.py  exchange.py  order.py  runner.py  tick.py
expobot/services/exchange/: backtest.py  base.py  manager.py  real.py  virtual.py
expobot/templates/: bot.html  bots.html  show_bots.html
expobot/templates/layouts/: main.html
expobot/templates/partial/: bot_details.html  bots_table_tbody.html
expobot/tests/: test_bot.py
tests/: test_bot.py
