[tool.poetry]
name = "expobot"
version = "0.1.0"
description = ""
authors = ["Ruslan Iskov <ruslan.rv.ua@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.76.0"
ccxt = "^1.81.95"
Jinja2 = "^3.1.2"
sqlmodel = "^0.0.6"
aiosqlite = "^0.17.0"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.6"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
